--- a/tut1/index.html
+++ b/tut1/index.html
@@ -65,7 +65,33 @@
             line-height: 20px;
             padding: 0 5px;
         } 
-
+        .two-columns.last {
+            padding: 15px 0;
+        }
+        .two-columns .padding{
+            padding: 20px;
+        }
+        .two-columns .content {
+            font-size: 15px;
+            line-height: 20px;
+            text-align: left;
+        }
+        .button {
+            background-color: #ffffff;
+            color: #171a1b;
+            text-decoration: none;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        .button-dark {
+            background-color: #171a1b;
+            color: #ffffff;
+            text-decoration: none;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -222,6 +248,8 @@
                                                 <tr>
                                                     <td>
                                                         <p style="font-weight: bold; font-size: 18px;">Create Custom Designs</p>
+                                                        <p style="padding-bottom: 16px;">Over the years we have built up a massive portfolio our client website and email designs.</p>
+                                                        <a href="#" class="button">Read More</a>
                                                     </td>
                                                 </tr>
                                             </table>
@@ -235,9 +263,41 @@
                 </td>
             </tr>
 <!-- TITLE, TEXT & BUTTON-->
-
+            <tr>
+                <td style="padding: 15px 0 50px">
+                    <table width="100%">
+                        <tr>
+                            <td style="text-align: center; padding: 15px;">
+                                <p style="font-size: 20px; font-weight: bold;">HTML Email Template Course</p>
+                                <p style="line-height: 23px; font-size: 15px; padding: 5px 0 15px;">Responsive HTML Email Templates that you can build around. Responsive HTML Email Templates that you can build around. Responsive HTML Email Templates that you can build around. Responsive HTML Email Templates that you can build around.</p>
+                                <a href="#" class="button-dark">View Course</a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
 <!-- FOOTER SECTION-->
+            <tr>
+                <td style="background-color: #26292b;">
+                    <table width="100%">
 
+                        <tr>
+                            <td style="text-align: center; padding: 45px 20px; color: #ffffff;">
+                                <a href="#"><img src="img/modern-white.png" alt="logo" width="180"></a>
+                                <p style="padding: 10px;">Modern HTML Email</p>
+                                <p style="padding: 10px;">123 Street Road, City, State</p>
+                                <a href="#"><img src="img/white-facebook.png" width="30px" alt=""></a>
+                                <a href="#"><img src="img/white-twitter.png" width="30px" alt=""></a>
+                                <a href="#"><img src="img/white-youtube.png" width="30px" alt=""></a>
+                                <a href="#"><img src="img/white-instagram.png" width="30px" alt=""></a>
+                                <a href="#"><img src="img/white-linkedin.png" width="30px" alt=""></a>
+                                <p style="padding: 10px;">SUBSCRIBE</p>
+                            </td>
+                        </tr>
+
+                    </table>
+                </td>
+            </tr>
         </table>
     </center>
 </body>
